--- a/docs/modules/components/pages/inputs/postgres_cdc.adoc
+++ b/docs/modules/components/pages/inputs/postgres_cdc.adoc
@@ -101,16 +101,7 @@ input:
 --
 ======
 
-Streams changes from a PostgreSQL database for Change Data Capture (CDC).
-Additionally, if `stream_snapshot` is set to true, then the existing data in the database is also streamed too.
-
-== Metadata
-
-This input adds the following metadata fields to each message:
-- table (Name of the table that the message originated from)
-- operation (Type of operation that generated the message: "read", "insert", "update", or "delete". "read" is from messages that are read in the initial snapshot phase. This will also be "begin" and "commit" if `include_transaction_markers` is enabled)
-- lsn (the log sequence number in postgres)
-		
+Using this field overrides the SSL/TLS settings in the environment and DSN.
 
 == Fields
 
